# ai-code-reviewer

./: .env.example  .gitignore  .reviewbot.yml  Cargo.toml  Dockerfile  README.md
docs/superpowers/plans/: 2026-05-23-ai-code-reviewer.md
docs/superpowers/specs/: 2026-05-23-ai-code-reviewer-design.md
src/: error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/context/: mod.rs  store.rs
src/diff/: deps.rs  fetcher.rs  mod.rs  parser.rs
src/github/: client.rs  comment.rs  mod.rs
src/llm/: claude.rs  gemini.rs  mod.rs  openai.rs
src/review/: common.rs  context.rs  mod.rs  quality.rs  security.rs  summary.rs
src/webhook/: comment_handler.rs  handler.rs  mod.rs  signature.rs
tests/fixtures/: .reviewbot.yml  diff_sample.patch  pr_event.json
tests/integration/: pipeline_test.rs  simulation_test.rs
