[package]
name = "reviewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reviewer"
path = "src/main.rs"

[lib]
name = "reviewer"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }

[[test]]
name = "integration"
path = "tests/integration/pipeline_test.rs"

[[test]]
name = "simulation"
path = "tests/integration/simulation_test.rs"
